syntax = "proto3";

package chat;

service ChatService {
  rpc Connect(ChatConnection) returns (Empty);
  rpc SendMessage(ChatMessage) returns (Empty);
  rpc OnMessageUpdated(stream Empty) returns (stream MessageList);
  
}

message ChatConnection {
  string userId = 1;
  string username = 2;
}

message ChatMessage {
  string userId = 1;
  string username = 2;
  string content = 3;
  int64 timestamp = 4;
}

message Empty {}

message MessageList {
  repeated ChatMessage messages = 1;
}
